<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2010 Paul Watts (paulcwatts@gmail.com)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/to_and_from_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/trip_plan_from_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/fromCurrentLocationImageButton"
                android:layout_toLeftOf="@id/fromCurrentLocationImageButton"
                app:endIconMode="clear_text">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/fromAddressTextArea"
                    style="@style/cursorColorTripPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/trip_plan_start_location_hint"
                    android:linksClickable="true"
                    android:requiresFadingEdge="horizontal"
                    android:singleLine="true"
                    android:text="@string/tripplanner_current_location" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/fromCurrentLocationImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="#00000000"
                android:contentDescription="@string/set_origin_to_my_location"
                android:src="@drawable/ic_my_location"
                android:tint="@color/material_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/trip_plan_to_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trip_plan_from_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/toCurrentLocationImageButton"
                android:layout_toLeftOf="@id/toCurrentLocationImageButton"
                app:endIconMode="clear_text">

                <AutoCompleteTextView
                    android:id="@+id/toAddressTextArea"
                    style="@style/cursorColorTripPlan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_plan_end_location_hint"
                    android:linksClickable="true"
                    android:requiresFadingEdge="horizontal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/toCurrentLocationImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="#00000000"
                android:contentDescription="@string/set_destination_to_my_location"
                android:src="@drawable/ic_my_location"
                android:tint="@color/material_gray" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_and_from_layout"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <Spinner
            android:id="@+id/leavingChoiceSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="Leaving" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false"
            android:inputType="none"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="June 14" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:color="@color/trip_plan_label"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/trip_plan_stop_connector" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:focusable="false"
            android:inputType="none"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="04:01 pm" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/resetTimeImageButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:background="#00000000"
            android:contentDescription="@string/reset_time"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrival_time"
            android:tint="@color/material_gray" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/chip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_load_trip_plan"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tripplanner_load_trip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/trip_plan_banner_ad_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"/>
        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/trip_plan_medium_native_ad_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:gnt_template_type="@layout/gnt_medium_template_view"
            android:visibility="gone"/>
        <com.google.android.ads.nativetemplates.TemplateView
            android:id="@+id/trip_plan_small_native_ad_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:gnt_template_type="@layout/gnt_small_template_view"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
