<?xml version="1.0" encoding="utf-8"?>
<TableRow
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_column="0">
        <ImageButton
                android:id="@+id/eta_route_favorite"
                android:src="@drawable/ic_toggle_star"
                android:contentDescription="@string/stop_info_favorite"
                android:background="?attr/selectableItemBackground"
                android:maxHeight="14dp"
                android:maxWidth="14dp"
                android:minHeight="14dp"
                android:minWidth="14dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/arrival_header_left_margin"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:padding="5dp"/>
        <ImageButton
                android:id="@+id/reminder"
                android:src="@drawable/ic_drawer_alarm"
                android:contentDescription="@string/trip_info_reminder_content_description"
                android:background="?attr/selectableItemBackground"
                android:maxHeight="12dp"
                android:maxWidth="12dp"
                android:minHeight="12dp"
                android:minWidth="12dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="-6dp"
                android:layout_marginLeft="@dimen/arrival_header_left_margin"
                android:layout_marginBottom="-1dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:visibility="gone"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/route_name_and_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/eta_and_min"
                    android:layout_column="1"
                    android:gravity="left"
                    android:orientation="horizontal">

        <TextView
                android:id="@+id/eta_route_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="GLNELG"
                style="@style/ArrivalsListItemRouteName"
                android:textColor="@color/header_text_color"/>

        <TextView
            android:id="@+id/eta_route_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eta_route_name"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="-5dp"
            android:ellipsize="end"
            android:gravity="bottom"
            android:singleLine="true"
            android:text="Aurora Village Via Aurora Ave."
            android:textAlignment="gravity"
            android:textColor="@color/header_text_faded_color"
            android:textIsSelectable="false"
            android:textSize="14sp" />

        <include
            android:id="@+id/vehicle_features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/vehicle_features"
            android:layout_marginStart="2dp"
            android:gravity="bottom"
            android:layout_alignBottom="@+id/eta_route_name"
            android:layout_marginBottom="9dp"
            android:layout_toEndOf="@+id/eta_route_name" />

        <include
            android:id="@+id/occupancy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/occupancy"
            android:layout_marginStart="2dp"
            android:gravity="bottom"
            android:layout_alignBottom="@+id/eta_route_name"
            android:layout_marginBottom="9dp"
            android:layout_toEndOf="@+id/vehicle_features" />

    </RelativeLayout>

    <include
            android:id="@+id/eta_and_min"
            layout="@layout/eta_header_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginLeft="@dimen/arrival_header_text_pad_left"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:background="@drawable/round_corners_style_b_header_status"/>

    <ImageButton
            android:id="@+id/eta_more_vert"
            android:src="@drawable/ic_navigation_more_vert"
            android:contentDescription="@string/stop_info_item_options_title"
            android:background="?attr/selectableItemBackground"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:gravity="bottom|right"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="-6dp"
            android:maxHeight="16dp"
            android:maxWidth="16dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
</TableRow>